--- a/composer.json
+++ b/composer.json
@@ -5,21 +5,20 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.4.0",
-        "laravel/framework": "^8.71",
-        "laravel/sanctum": "^2.12",
-        "laravel/tinker": "^2.6"
+        "php": "^8.0.2",
+        "guzzlehttp/guzzle": "^7.4",
+        "laravel/framework": "^9.13",
+        "laravel/sanctum": "^2.15.1",
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
-        "facade/ignition": "^2.16",
-        "fakerphp/faker": "^1.16.0",
-        "kirschbaum-development/mail-intercept": "^0.2",
-        "laravel/sail": "^1.12.5",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
-        "phpunit/phpunit": "^9.5.10"
+        "fakerphp/faker": "^1.19.0",
+        "kirschbaum-development/mail-intercept": "^0.3",
+        "laravel/sail": "^1.14.6",
+        "mockery/mockery": "^1.5.0",
+        "nunomaduro/collision": "^6.2",
+        "phpunit/phpunit": "^9.5.20",
+        "spatie/laravel-ignition": "^1.2"
     },
     "autoload": {
         "psr-4": {
@@ -39,7 +38,7 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
