--- a/composer.json
+++ b/composer.json
@@ -5,20 +5,21 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
-        "guzzlehttp/guzzle": "^7.4",
-        "laravel/framework": "^9.25",
-        "laravel/sanctum": "^2.15.1",
-        "laravel/tinker": "^2.7"
+        "php": "^8.1",
+        "guzzlehttp/guzzle": "^7.5",
+        "laravel/framework": "^10.7",
+        "laravel/sanctum": "^3.2",
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.19.0",
-        "kirschbaum-development/mail-intercept": "^0.3",
-        "laravel/sail": "^1.15.4",
-        "mockery/mockery": "^1.5.0",
-        "nunomaduro/collision": "^6.2",
-        "phpunit/phpunit": "^9.5.22",
-        "spatie/laravel-ignition": "^1.3"
+        "fakerphp/faker": "^1.21.0",
+        "kirschbaum-development/mail-intercept": "^0.4",
+        "laravel/pint": "^1.8",
+        "laravel/sail": "^1.21",
+        "mockery/mockery": "^1.5.1",
+        "nunomaduro/collision": "^7.5",
+        "phpunit/phpunit": "^10.1",
+        "spatie/laravel-ignition": "^2.1"
     },
     "autoload": {
         "psr-4": {
@@ -55,8 +56,12 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
+        }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
